--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -56,10 +56,9 @@
         .data-product{
             margin-top: 25px;
             padding: 25px;
-            box-shadow: 3px 3px 28px 1px rgba(199,195,195,0.78);
-                -webkit-box-shadow: 3px 3px 28px 1px rgba(199,195,195,0.78);
-                -moz-box-shadow: 3px 3px 28px 1px rgba(199,195,195,0.78);
+            border: 1px rgb(166, 166, 166);
             border-radius: 12px;
+            background-color: white;
         }
     </style>
 
@@ -87,7 +86,8 @@
 
             <div class="dropdown text-end px-3">
               <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+                <!-- <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle"> -->
+                <img src="https://simg.nicepng.com/png/small/128-1280406_view-user-icon-png-user-circle-icon-png.png" alt="" width="32" height="32" class="rounded-circle me-2">
               </a>
               <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
                 <li><a class="dropdown-item" href="#">Settings</a></li>
